--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body{
     color:antiquewhite;
 
 }h1{
-    
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-decoration-line: overline;
     font-size: 30pt;
     text-align: center;
@@ -13,32 +13,64 @@ body{
 
 header{
     text-align:center;
+    
 }
 
 header img{
+    border: .3cm solid #22403A;
     align-items: center;
     max-width: 20%;
 }
 
-#reviews{
-    text-align: center;
-    color: lightpink;
+#hero
+{
+    padding-left: 1rem;
+    background-color: antiquewhite;
+    color: black;
+    border: 5rem solid black;
 }
+
+#bio
+{
+    text-align: center;
+    line-height: 2;
+    margin-bottom: 2rem;
+
+}
+#reviews{
+    margin-top: 2rem;
+    text-align: center;
+}
+
 
 #first
 {
+    background-color: lightblue;
+    color: black;
     text-align: left;
     padding-left: 2rem;
+    border: 3rem solid black;
 }
 
 #second
 {
+    background-color: lightpink;
+    color: black;
     text-align: right;
     padding-right: 2rem;
+    border: 3rem solid black;
 }
 
 #third
 {
+    background-color: lightyellow;
+    color: black;
     text-align: left;
     padding-left: 2rem;
+    border: 3rem solid black;
+}
+
+#footer
+{
+    text-align: center;
 }
