--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ header img{
 
 #bio
 {
+    text-decoration-line: underline;
     text-align: center;
     line-height: 2;
     margin-bottom: 2rem;
